--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "log-generator": "node ./log-generator/log-generator.js",
     "web-app": "cross-env DEBUG=log-dashboard:server node ./bin/www",
     "start": "npm-run-all --parallel log-generator web-app",
-    "test:module2": "cross-env NODE_ENV=test mocha --exit './test/module2/*.spec.js' || true",
-    "test:module3": "cross-env NODE_ENV=test mocha --exit './test/module3/*.spec.js' || true",
-    "test:module4": "cross-env NODE_ENV=test mocha --exit './test/module4/*.spec.js' || true",
-    "test:module5": "cross-env NODE_ENV=test mocha --exit './test/module5/*.spec.js' || true",
-    "test:module6": "cross-env NODE_ENV=test mocha --exit './test/module6/*.spec.js' || true"
+    "test:module2": "cross-env NODE_ENV=test mocha --exit './test/module2/*.spec.js'",
+    "test:module3": "cross-env NODE_ENV=test mocha --exit './test/module3/*.spec.js'",
+    "test:module4": "cross-env NODE_ENV=test mocha --exit './test/module4/*.spec.js'",
+    "test:module5": "cross-env NODE_ENV=test mocha --exit './test/module5/*.spec.js'",
+    "test:module6": "cross-env NODE_ENV=test mocha --exit './test/module6/*.spec.js'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
